revision 49 - 20100725                                      |
libspeedtest:                                               |
  * Fixed a serious bug introduced in previous commits that |
    caused segmentation fault when exiting without having   |
    first run a test                                        |


revision 48 - 20100725                                      |
libspeedtest:                                               |
  * Fixed a minor bug introduced in previous commit that    |
    caused a QProcess-related message in stderr             |


revision 47 - 20100725                                      |
libspeedtest:                                               |
  * Some fixes in HostInfo and PingHost code for IBM OS/2   |
                                                            |
QSpeedTest:                                                 |
  * Fixed minor bug in program update availability message  |


revision 46 - 20100725                                      |
libspeedtest:                                               |
  * Detect and print ISP network in the reports             |


revision 45 - 20100725                                      |
libspeedtest:                                               |
  * Minor changes in report layout                          |


revision 44 - 20100724                                      |
libspeedtest:                                               |
  * Improved max scaling algorithm for the download charts  |
  * Updated embedded resources' hostlist to 201007220909    |
                                                            |
QSpeedTest:                                                 |
  * Prevent exiting the application via Window Manager's    |
    "X" button or the File > Exit menuitem when a test is   |
    still in progress                                       |


revision 43 - 20100723                                      |
QSpeedTestCLI:                                              |